  * herd : amke exchange an expression (was an instruction !)
  * herd : use short memory model names in pictures
  * tools : handle C arch
7.01

  * herd: Add minimal atomicity to LL/SS (PPC and ARM).
  * herd: Recursive procedure + match instruction.

7.00 Release 'Seven'
  * herd: refactored release.
  * litmus:  -driver optiopn to generate standalone C programs or Objective C
  * litmus:  More configuration files (nexus10..)
  * litmus:  Refactoring: avoid mutable internal flags.

  
5.01 Release
  * litmus:  litmus option -crossrun adb -> run.sh connects to device using adb
    (Android Debugging Bridge)

5.00 Release
   * gen: Added classify tool
   * gen: Uniform naming scheme, clarify usage and document
   * gen: Refactor diyone second mode, in the same style as diy/diycross
   * gen: Support for atomic accesses (undocumented)

  * litmus:  added the mcycles tool
  * litmus:  iPad and asus TF300T configuration files.
  * litmus:  New user synchronisation mode userfence (suggested by Javi Merino)
  * litmus:  More POSIX compliant code in two occasions (malloc/errno and
    use thread level affinity functions, suggested by Javi Merino)
  * litmus:  Runtime option +fix, to cancel out changing launch mode
  * litmus:  Make timebase delay settable (option -delay)
  * litmus:  Timebase synchronisation mode (-barrier timebase).
  * litmus:  option -crossrun <host> -> run.sh run executables on distant machine <host>.
  * litmus:  add -stride mode (memory scanned by increments > 1), useful ? Very useful.
  * litmus:  -linkopt option
  * litmus:  -kind false option, to suppress kind and validation information from output
  * litmus:  -gcc option
  * litmus:  ARM and cortex9 (cross-compilation) configuration files

4.00 Release
   * gen: ARM support.
   * gen: Generalize -o option, as for litmus.
   * gen: option -var for diycross for nice variables.,
   * gen: new tool diycross, similar to diyvar, but let user
     specify  the list of alternatives eg: