@@ -54,6 +54,11 @@ include Arch.MakeArch(struct
        | None -> None
        | Some subs -> match_expr subs ex ex'
        end
+    | Fetch(l,op,ex,mo),Fetch(l',op',ex',mo') when mo=mo' && op=op' ->
+       begin match match_location subs l l' with
+       | None -> None
+       | Some subs -> match_expr subs ex ex'
+       end
     | _ -> None
        
   let rec match_instr subs pattern instr = match pattern,instr with
@@ -80,11 +85,6 @@ include Arch.MakeArch(struct
 	    | _ -> None
     end
     | Store(l,ex,mo),Store(l',ex',mo') when mo=mo' ->
-       begin match match_location subs l l' with
-       | None -> None
-       | Some subs -> match_expr subs ex ex'
-       end
-    | Fetch(l,op,ex,mo),Fetch(l',op',ex',mo') when mo=mo' && op=op' ->
        begin match match_location subs l l' with
        | None -> None
        | Some subs -> match_expr subs ex ex'
@@ -124,6 +124,7 @@ include Arch.MakeArch(struct
       | Load(l,mo) -> Load(expl_loc l,mo)
       | Op(op,e1,e2) -> Op(op,expl_expr e1,expl_expr e2)
       | Exchange(l,e,mo) -> Exchange(expl_loc l, expl_expr e,mo)
+      | Fetch(l,op,e,mo) -> Fetch(expl_loc l,op,expl_expr e,mo)
       | x -> x 
     in
     function
@@ -136,7 +137,6 @@ include Arch.MakeArch(struct
        in
        If(expl_expr c,expl_instr subs free t,e)
     | Store(l,e,mo) -> Store(expl_loc l, expl_expr e,mo)
-    | Fetch(l,op,e,mo) -> Fetch(expl_loc l,op,expl_expr e,mo)
     | Lock l -> Lock(expl_loc l)
     | Unlock l -> Unlock(expl_loc l)
     | Symb s -> find_code s
