@@ -76,13 +76,13 @@ let list_loc prog =
     | Load(l,_) -> LocSet.add l s
     | Op(_,e1,e2) -> expr (expr s e1) e2
     | Exchange(l,e,_) -> LocSet.add l (expr s e)
+    | Fetch(l,_,e,_) -> LocSet.add l (expr s e)
   in 
   let rec ins s = function
     | Seq(l) -> List.fold_left ins s l
     | If(c,t,Some e) -> expr (ins (ins s e) t) c
     | If(c,t,None) -> expr (ins s t) c
     | Store(l,e,_) -> LocSet.add l (expr s e)
-    | Fetch(l,_,e,_) -> LocSet.add l (expr s e)
     | Lock l -> LocSet.add l s
     | Unlock l -> LocSet.add l s
     | _ -> s
