@@ -1,6 +1,7 @@
   * herd : amke exchange an expression (was an instruction !)
   * herd : use short memory model names in pictures
-  * tools : handle C arch
+  * lib : C make exchange and fetch expressions, as they should be.
+  * tools : handle C arch completely
 7.01
 
   * herd: Add minimal atomicity to LL/SS (PPC and ARM).
